--- a/CSS/Booth Directory Page.css
+++ b/CSS/Booth Directory Page.css
@@ -16,7 +16,8 @@ body {
     font-family: 'Kanit', sans-serif;
     height: 100vh;
     width: 100vw;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
     background-color: #fff;
 }
 
@@ -157,7 +158,6 @@ body {
     body {
         height: auto;
         overflow-y: auto;
-        overflow-x: hidden;
     }
 
     .container {
@@ -165,7 +165,6 @@ body {
         grid-auto-rows: minmax(250px, auto);
         grid-template-rows: auto;
         height: auto;
-        padding-bottom: 80px;
     }
 
     .booth-card {
